fixed design issues
